--- a/index.html
+++ b/index.html
@@ -67,17 +67,110 @@
         <span>إغتنم تخفضيات  20%  بمناسبة شهر رمضان</span>
     </div>
 
+    <div class="banner">
+        <img src="./images/ads/ar_banner-01 (1) 1.png"/>
+        <div class="left">
+            <img src="./images/ads/arrow-left.svg"/>
+        </div>
+        <div class="right">
+            <img src="./images/ads/arrow-right.svg"/>
+        </div>
+        <div class="tabs">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="active"></div>
+        </div>
+    </div>
 
-    <!-- <div class="row">
-        <div class="col col-lg-4 col-md-6 col-sm-12">
-            A
+    <div class="categories row">
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_FoeIOgztCXo.png"/>
+            <p>ادوات تجميل</p>
         </div>
-        <div class="col col-lg-4 col-md-6 col-sm-12">
-            B
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_GLg0z5z8EQU.png"/>
+            <p>ملابس نسائية</p>
         </div>
-        <div class="col col-lg-4 col-md-6 col-sm-12">
-            C
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_kLIZQ8iUdzA.png"/>
+            <p>ملابس رجالية</p>
         </div>
-    </div> -->
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_PeX3e51pHIE.png"/>
+            <p>العاب</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_FoeIOgztCXo.png"/>
+            <p>ادوات تجميل</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_GLg0z5z8EQU.png"/>
+            <p>ملابس نسائية</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_kLIZQ8iUdzA.png"/>
+            <p>ملابس رجالية</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_PeX3e51pHIE.png"/>
+            <p>العاب</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_iZVrfElG1t0.png"/>
+            <p>ساعات ذكية</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_gz9njd0zYbQ.png"/>
+            <p>الكترونيات</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_yFnX8DaC3UM.png"/>
+            <p>كاميرات</p>
+        </div>
+        <div class="col-lg-1 col-md-2 col-sm-3">
+            <img src="./images/categories/unsplash_xsGxhtAsfSA.png"/>
+            <p>موبايلات</p>
+        </div>
+    </div>
+
+    <div class="sales row">
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales/Rectangle 726.png"/>
+                <div class="text">
+                    <p>إشترى واحد واحصلى على الاخر مجانا</p>
+                    <span>ادوات تجميل</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales/Rectangle 728.png"/>
+                <div class="text">
+                    <p>تمتع بخصم 60% عند شرائك اكتر من منتج</p>
+                    <span>الاحذية</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales/Rectangle 726.png"/>
+                <div class="text">
+                    <p>إشترى واحد واحصلى على الاخر مجانا</p>
+                    <span>ادوات تجميل</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales/Rectangle 728.png"/>
+                <div class="text">
+                    <p>تمتع بخصم 60% عند شرائك اكتر من منتج</p>
+                    <span>الاحذية</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
