--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Tajawal&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syncopate&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -172,5 +173,54 @@
             </div>
         </div>
     </div>
+
+    <div class="countdown">
+        <div class="timer">
+            <div>
+                <p>2</p>
+                <span>ايام</span>
+            </div>
+            <span> : </span>
+            <div>
+                <p>12</p>
+                <span>ساعات</span>
+            </div>
+            <span> : </span>
+            <div>
+                <p>03</p>
+                <span>دقائق</span>
+            </div>
+            <span> : </span>
+            <div>
+                <p>15</p>
+                <span>ثوانى</span>
+            </div>
+        </div>
+        <div class="title">
+            <img src="./images/countdown/_x33_.svg">
+            <p>عروض شهر رمضان</p>
+        </div>
+    </div>
+
+    <div class="banner">
+        <img src="./images/banner/Group 208.png"/>
+    </div>
+
+    <div class="just-text">
+        <p>عروض خاصة من اجلك</p>
+        <p>
+            كل
+            <span>خصم</span>
+            نقوم بتقديمه هو الافضل فى السوق!
+        </p>
+        <div>
+            <p>
+                تخفيضات ل
+                40%
+                اغتنم الفرصة الان
+            </p>
+        </div>
+    </div>
+
 </body>
 </html>
