--- a/index.html
+++ b/index.html
@@ -222,5 +222,148 @@
         </div>
     </div>
 
+    <div class="today-sales">
+        <div class="headers">
+            <a>تسوق الان</a>
+            <p>عروض 
+                <span>اليوم</span>
+            </p>
+        </div>
+        <div class="row">
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <img src="./images/today-sales/unsplash_-aMhLQwGd2g.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <img src="./images/today-sales/unsplash_wsCwj455vh0.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <img src="./images/today-sales/unsplash_NoVnXXmDNi0.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <img src="./images/today-sales/unsplash_dwKiHoqqxk8.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
