--- a/index.html
+++ b/index.html
@@ -365,5 +365,91 @@
         </div>
     </div>
 
+    <div class="sales-24h">
+        <div class="title">
+            <img src="./images/countdown/_x33_.svg">
+            <p>
+                عروض سوبر لـ 24 ساعه فقط
+            </p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div>
+                    <img src="./images/sales-24h/Rectangle 736.png"/>
+                    <div>
+                        <p>
+                            عروض الالكترونيات
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            60
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sales-24h/Rectangle 736.png"/>
+                    <div>
+                        <p>
+                            عروض الالكترونيات
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            60
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sales-24h/Rectangle 736.png"/>
+                    <div>
+                        <p>
+                            عروض الالكترونيات
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            60
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sales-24h/Rectangle 736.png"/>
+                    <div>
+                        <p>
+                            عروض الالكترونيات
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            60
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sales-24h/Rectangle 736.png"/>
+                    <div>
+                        <p>
+                            عروض الالكترونيات
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            60
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
