--- a/index.html
+++ b/index.html
@@ -660,5 +660,92 @@
         </div>
     </div>
 
+    <div class="ramadan-sales">
+        <div class="headers">
+            <a>تسوق الان</a>
+            <p>منتجات شهر 
+                <span>رمضان</span>
+            </p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div>
+                    <img src="./images/ramadan-sales/Vector 27.png"/>
+                    <p>
+                        سكتشرز
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/ramadan-sales/Vector 27.png"/>
+                    <p>
+                        روتين وتجميل
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/ramadan-sales/Vector 27.png"/>
+                    <p>
+                        ألعاب وترفيه
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/ramadan-sales/Vector 27.png"/>
+                    <p>
+                        عبادة وروحانيات
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/ramadan-sales/Vector 27.png"/>
+                    <p>
+                        الإفطار والسحور 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sales sales2 row">
+        <div class="col col-lg-4 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales2/Group 294.png"/>
+                <div class="text">
+                    <p>
+                        الشحن مجانى على منتجات بأكتر من 300 ريال
+                    </p>
+                    <span>الاحذية</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-4 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales2/Group 287.png"/>
+                <div class="text">
+                    <p>
+                        اشترى واحد تحصلى على الاخر مجانا
+                    </p>
+                    <span>ادوات تجميل</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-4 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/sales2/Group 293.png"/>
+                <div class="text">
+                    <p>
+                        خصم 20% عند الاشتراك فى القائمة البريدية
+                    </p>
+                    <span>المنزل وادوات البيت</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
