--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
         </div>
         <div class="title">
-            <img src="./images/countdown/_x33_.svg">
+            <img src="./images/countdown/moon.svg">
             <p>عروض شهر رمضان</p>
         </div>
     </div>
@@ -367,7 +367,7 @@
 
     <div class="sales-24h">
         <div class="title">
-            <img src="./images/countdown/_x33_.svg">
+            <img src="./images/countdown/moon.svg">
             <p>
                 عروض سوبر لـ 24 ساعه فقط
             </p>
