--- a/index.html
+++ b/index.html
@@ -747,5 +747,48 @@
         </div>
     </div>
 
+    <div class="women-sales">
+        <div class="title">
+            <img src="./images/countdown/moon.svg">
+            <p>
+                تألقى طول شهر رمضان
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_5gkYsrH_ebY.png"/>
+                    <p>
+                        أزياء نسائية
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس رياضية
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_gUPiTDBdRe4.png"/>
+                    <p>
+                        أزياء رمضان
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_xXJ6utyoSw0.png"/>
+                    <p>
+                        أدوات تجميل
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
