--- a/index.html
+++ b/index.html
@@ -999,5 +999,60 @@
         </div>
     </div>
 
+    <div class="electronics-sales women-clothes">
+        <div class="headers">
+            <a>شاهدى كل العروض</a>
+            <p>
+                خصم
+                <span>40 %</span>
+                على الازياء النسائية
+            </p>
+        </div>
+    </div>
+    <div class="ramadan-sales sale40">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
