--- a/index.html
+++ b/index.html
@@ -1054,5 +1054,422 @@
         </div>
     </div>
 
+    <div class="electronics-sales women-clothes red-section">
+        <div class="headers">
+            <a>تسوق الان</a>
+            <p>
+                %
+                تخفيضات حتى
+                40
+            </p>
+        </div>
+        <p class="red-section-info">
+            عروض لمدة
+            24
+            ساعة تصفح المنتجات الان قبل نفاذ الكمية
+        </p>
+    </div>
+    <div class="ramadan-sales sale40 red-section">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div>
+                        <img src="./images/red-section/unsplash_Hd4nlxLgIbA.png"/>
+                    </div>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="women-sales">
+        <div class="title">
+            <img src="./images/countdown/moon.svg">
+            <p>
+                تألق طول شهر رمضان
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_5gkYsrH_ebY.png"/>
+                    <p>
+                        أزياء رجالية
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس رياضية
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_gUPiTDBdRe4.png"/>
+                    <p>
+                        أزياء رمضان
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/women-sales/unsplash_xXJ6utyoSw0.png"/>
+                    <p>
+                        سنيكرز
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="electronics-sales women-clothes">
+        <div class="headers">
+            <a>تسوق الان</a>
+            <p>
+                ازياء رجالية
+            </p>
+        </div>
+        <div class="row">
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_-aMhLQwGd2g.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_wsCwj455vh0.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_-aMhLQwGd2g.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_wsCwj455vh0.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_NoVnXXmDNi0.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-2 col-md-4 col-sm-6">
+                <img src="./images/today-sales/unsplash_dwKiHoqqxk8.png"/>
+                <div>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <p>
+                        حذاء نسائي للاناقة والراحة
+                    </p>
+                    <div class="rating">
+                        <div class="text">
+                            تقييم
+                            420
+                            عميل
+                        </div>
+                        <div class="stars">
+                            <span>(5.0)</span>
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                            <img src="./images/today-sales/star.svg">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p>60 SAR</p>
+                        <span>60 SAR</span>
+                        <a>
+                            شحن سريع
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="electronics-sales women-clothes">
+        <div class="headers">
+            <a>شاهد كل العروض</a>
+            <p>
+                خصم
+                <span>40 %</span>
+                على الازياء الرجالية
+            </p>
+        </div>
+    </div>
+    <div class="ramadan-sales sale40">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/sale40/unsplash_7cERndkOyDw.png"/>
+                    <p>
+                        ملابس
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
