--- a/index.html
+++ b/index.html
@@ -1978,5 +1978,130 @@
         </div>
     </div>
 
+    <div class="sales sales2 row">
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/last-sales/Rectangle 726.png"/>
+                <div class="text">
+                    <p>
+                        الشحن مجانى على منتجات بأكتر من 300 ريال
+                    </p>
+                    <span>الاحذية</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-3 col-md-6 col-sm-12">
+            <div>
+                <img src="./images/last-sales/Rectangle 728.png"/>
+                <div class="text">
+                    <p>
+                        اشترى واحد تحصلى على الاخر مجانا
+                    </p>
+                    <span>ادوات تجميل</span>
+                </div>
+            </div>
+        </div>
+        <div class="col col-lg-6 col-md-12 col-sm-12">
+            <div>
+                <img src="./images/last-sales/Rectangle 762.png"/>
+                <div class="text">
+                    <p>
+                        خصم 20% عند الاشتراك فى القائمة البريدية
+                    </p>
+                    <span>المنزل وادوات البيت</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sales-24h house-sales electronics">
+        <div class="headers">
+            <a>شاهد كل العروض</a>
+            <div class="title">
+                <img src="./images/countdown/moon.svg">
+                <p>
+                    عروض الالكترونيات لشهر رمضان
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div>
+                    <img src="./images/electronics/unsplash_PDX_a_82obo.png"/>
+                    <div>
+                        <p>
+                            اكسسوارات الكمبيوتر
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            25
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/electronics/unsplash_PDX_a_82obo.png"/>
+                    <div>
+                        <p>
+                            اكسسوارات الكمبيوتر
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            25
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/electronics/unsplash_PDX_a_82obo.png"/>
+                    <div>
+                        <p>
+                            اكسسوارات الكمبيوتر
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            25
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/electronics/unsplash_PDX_a_82obo.png"/>
+                    <div>
+                        <p>
+                            اكسسوارات الكمبيوتر
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            25
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <img src="./images/electronics/unsplash_PDX_a_82obo.png"/>
+                    <div>
+                        <p>
+                            اكسسوارات الكمبيوتر
+                        </p>
+                        <span>
+                            %
+                            خصم حتى
+                            25
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
