--- a/index.html
+++ b/index.html
@@ -3036,5 +3036,77 @@
         </div>
     </div>
 
+    <div class="women-sales best-brands">
+        <div class="title">
+            <img src="./images/countdown/moon.svg">
+            <p>
+                افضل العلامات التجارية
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-lg-2 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/brands/png-transparent-adidas-adidas-text-photography-logo 2.png"/>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/brands/20190919000353!Essence_logo_in_black 1.png"/>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/brands/1280px-H&M-Logo 1.png"/>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/brands/png-transparent-adidas-adidas-text-photography-logo 2.png"/>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col">
+                <div>
+                    <img src="./images/brands/20190919000353!Essence_logo_in_black 1.png"/>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-banner">
+        <div class="row">
+            <div class="col col-lg-2 col-md-6 col-sm-12">
+                <div>
+                    <img src="./images/footer/Phone.svg"/>
+                    <p>عبر الهاتف</p>
+                    <p>050000000</p>
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <div>
+                    <img src="./images/footer/Mail.svg"/>
+                    <p>البريد الالكترونى</p>
+                    <p>support@lavana.com</p>
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-6 col-sm-12">
+                <div>
+                    <img src="./images/footer/Smile.svg"/>
+                    <p>مركز المساعدة</p>
+                    <p>help.lavana.com</p>
+                </div>
+            </div>
+            <div class="col col-lg-4 col-md-6 col-sm-12">
+                <div class="text">
+                    <p>
+                        نحن دائما جاهزون لمساعدتك
+                    </p>
+                    <p>
+                        تواصل معنا عبر قنوات الدعم التالية
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
